--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -27,12 +27,11 @@
           .description Just like the one at your competition pool.
           .info
             Available in the app store for
-            %a{href:"https://itunes.apple.com/us/app/pace-clock/id463105064?mt=12"} Mac
-            ,
-            %a{href:"https://itunes.apple.com/us/app/pace-clock/id465060982?mt=8"} iPhone, and iPad.
+            %a{href:"https://itunes.apple.com/us/app/pace-clock/id463105064?mt=12"}Mac,
+            %a{href:"https://itunes.apple.com/us/app/pace-clock/id465060982?mt=8"}iPhone, and iPad.
         .section
           %img.slide{:src => "assets/slide_SwimScore.png"}/
           .title LaserTrack
           .description LaserShip package tracker.
           .info
-            Discontinued, as package trackers now support LaserShip. Try <a href="http://itunes.apple.com/us/app/parcel/id375589283?mt=8">Parcel</a> or <a href="http://itunes.apple.com/us/app/delivery-status-touch-package/id290986013?mt=8">Delivery Status touch</a>.
+            Discontinued, as other package trackers now support LaserShip. Try <a href="http://itunes.apple.com/us/app/parcel/id375589283?mt=8">Parcel</a> or <a href="http://itunes.apple.com/us/app/delivery-status-touch-package/id290986013?mt=8">Delivery Status touch</a>.
