Added lasertrack artwork.

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -30,7 +30,7 @@
             %a{href:"https://itunes.apple.com/us/app/pace-clock/id463105064?mt=12"}Mac,
             %a{href:"https://itunes.apple.com/us/app/pace-clock/id465060982?mt=8"}iPhone, and iPad.
         .section
-          %img.slide{:src => "assets/slide_SwimScore.png"}/
+          %img.slide{:src => "assets/slide_LaserTrack.png"}/
           .title LaserTrack
           .description LaserShip package tracker.
           .info
