Added slide for web thumb.

--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,8 +1,9 @@
 body
   font-family: Trebuchet MS, Helvetica, sans-serif
   padding-top: 5px
-  background: #fff
-
+  background-color: white
+  background-image: url('assets/slides.jpg')
+  background-repeat: no-repeat
 a
   text-decoration: none
 @font-face
