--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -14,6 +14,14 @@
     .slides
       %div
         .section
+          %img.slide{:src => "assets/slide_WebThumb.png"}/
+          .title Web Thumb
+          .description Create thumbnails from mobile websites.
+          .info
+            Available in the
+            %a{href:"https://itunes.apple.com/us/app/web-thumb/id674691616?ls=1&mt=8"} app store
+            for iPhone.
+        .section
           %img.slide{:src => "assets/slide_SwimScore.png"}/
           .title Swim Score
           .description Score dual swim meets for DC area summer teams.
@@ -22,7 +30,7 @@
             %a{href:"https://itunes.apple.com/us/app/swim-score/id521595188?mt=8"} app store
             for iPhone and iPad.
         .section
-          %img.slide{:src => "assets/slide_PaceClock.png"}/
+          %img.slide{src:"assets/slide_PaceClock.png"}/
           .title Pace Clock
           .description Just like the one at your competition pool.
           .info
