--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -2,13 +2,13 @@ body
   font-family: Trebuchet MS, Helvetica, sans-serif
   padding-top: 5px
   background-color: white
-  background-image: url('assets/slides.jpg')
-  background-repeat: no-repeat
 a
   text-decoration: none
+  
 @font-face
   font-family: Snake
-  src: url('fonts/snake.ttf')
+  src: url('/fonts/Snake.ttf')
+  
 $slide-size: 262.5px
 $slide-text-width: 230px
 .header, .slides
