Added support email.

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -40,3 +40,4 @@
           .description LaserShip package tracker.
           .info
             Discontinued, as other package trackers now support LaserShip. Try <a href="http://itunes.apple.com/us/app/parcel/id375589283?mt=8">Parcel</a> or <a href="http://itunes.apple.com/us/app/delivery-status-touch-package/id290986013?mt=8">Delivery Status touch</a>.
+      %a{href:"mailto:support@dewee.se"}Product Support
