--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -11,7 +11,7 @@
     .slides
       %div
         .section
-          %img.slide{:src => "assets/slide_WebThumb.png"}/
+          %img.slide{:src => "#{asset_path('slide_WebThumb.png')}"}/
           .title Web Thumb
           .description Create thumbnails from mobile websites.
           .info
@@ -19,7 +19,7 @@
             %a{href:"https://itunes.apple.com/us/app/web-thumb/id674691616?ls=1&mt=8"} app store
             for iPhone.
         .section
-          %img.slide{:src => "assets/slide_SwimScore.png"}/
+          %img.slide{:src => "#{asset_path('slide_SwimScore.png')}"}/
           .title Swim Score
           .description Score dual swim meets for DC area summer teams.
           .info
@@ -27,7 +27,7 @@
             %a{href:"https://itunes.apple.com/us/app/swim-score/id521595188?mt=8"} app store
             for iPhone and iPad.
         .section
-          %img.slide{src:"assets/slide_PaceClock.png"}/
+          %img.slide{src:"#{asset_path('slide_PaceClock.png')}"}/
           .title Pace Clock
           .description Just like the one at your competition pool.
           .info
@@ -35,7 +35,7 @@
             %a{href:"https://itunes.apple.com/us/app/pace-clock/id463105064?mt=12"}Mac,
             %a{href:"https://itunes.apple.com/us/app/pace-clock/id465060982?mt=8"}iPhone, and iPad.
         .section
-          %img.slide{:src => "assets/slide_LaserTrack.png"}/
+          %img.slide{:src => "#{asset_path('slide_LaserTrack.png')}"}/
           .title LaserTrack
           .description LaserShip package tracker.
           .info
