Fixed title and moved right header margin.

--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -75,6 +75,7 @@ $slide-text-width: 230px
       padding: 30px
       @include border-radius(6px)
       background-color: hsla(0, 0%, 88%, 0.8)
+      color: black
       text-align: justify
       font-size: 1.2em
     &:hover
@@ -87,3 +88,4 @@ $slide-text-width: 230px
 .stackoverflow
   float: right
   opacity: .9
+  margin-right: 3px
