Added linkedin link.

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -2,7 +2,10 @@
   %a.stackoverflow{:href => "http://stackexchange.com/users/d0914c5748014de488165cc0acf51de0"}
     %img{:alt => "profile for Peter DeWeese on Stack Exchange, a network of free, community-driven Q&A sites", :height => "58", :src => "http://stackexchange.com/users/flair/d0914c5748014de488165cc0acf51de0.png", :title => "profile for Peter DeWeese on Stack Exchange, a network of free, community-driven Q&A sites", :width => "208"}
   %h1 Peter DeWeese
-  .text iOS and web Software Engineer in Northern Virginia.
+  .text
+    iOS and web Software Engineer in Northern Virginia.
+    %a{href:"http://www.linkedin.com/in/peterdeweese", style:"text-decoration:none;"}
+      %img{src:"http://www.linkedin.com/img/webpromo/btn_in_20x15.png", width:"20", height:"15", alt:"View LinkedIn profile", style:"vertical-align:top", border:"0"}
 .slides
   .slide
     .front
