Added background gradient.

--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,8 +1,7 @@
-@import "compass/css3/transform"
-@import "compass/css3/transition"
-@import "compass/css3/border-radius"
+@import "compass"
 
 body
+  +background-image(linear-gradient(left, rgba(127,127,127,0.25) 0%, rgba(127,127,127,0.05) 20%, rgba(127,127,127,0.1) 80%, rgba(127,127,127,0.25) 100%))
   font-family: Trebuchet MS, Helvetica, sans-serif
   padding-top: 5px
   background-color: white
