--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,4 +1,5 @@
 @import "compass"
+@import "font-awesome"
 
 body
   +background-image(linear-gradient(left, rgba(127,127,127,0.25) 0%, rgba(127,127,127,0.05) 20%, rgba(127,127,127,0.1) 80%, rgba(127,127,127,0.25) 100%))
