--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -4,8 +4,22 @@
   %h1 Peter DeWeese
   .text
     iOS and web Software Engineer in Northern Virginia.
-    %a{href:"http://www.linkedin.com/in/peterdeweese", style:"text-decoration:none;"}
-      %img{src:"http://www.linkedin.com/img/webpromo/btn_in_20x15.png", width:"20", height:"15", alt:"View LinkedIn profile", style:"vertical-align:top", border:"0"}
+    %a{href:"https://twitter.com/peterdeweese"}
+      %span.icon-stack
+        %i.icon-check-empty.icon-stack-base
+        %i.icon-twitter
+    %a{href:"http://www.linkedin.com/in/peterdeweese"}
+      %span.icon-stack
+        %i.icon-check-empty.icon-stack-base
+        %i.icon-linkedin
+    %a{href:"https://github.com/peterdeweese"}
+      %span.icon-stack
+        %i.icon-check-empty.icon-stack-base
+        %i.icon-github
+    %a{href:"http://stackoverflow.com/users/431053/peter-deweese"}
+      %span.icon-stack
+        %i.icon-check-empty.icon-stack-base
+        %i.icon-stackexchange
 .slides
   .slide
     .front
