Added main view and throw action.

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,5 +1,10 @@
 .main
   %h1 Rock Paper Scissors
-  .field
-  = f.label Choose wisely
-  = f.datetime_select :submit_date
+  %p
+    %form{action:"throw"}
+      %b Choose wisely:
+      %select
+        %option Rock
+        %option Paper
+        %option Scissors
+      = submit_tag 'Throw!'
