--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -9,9 +9,22 @@ body
     margin-top: 2em
     margin-bottom: 2em
     font-family: Helvetica
+    p
+      padding-bottom: 20px
+    .result-label
+      width: 70px
+      display: inline-block
     h1
       font-size: 200%
+      vertical-align: middle
       line-height: 200%
     .flash
       font-size: 150%
       color: gray
+    .weapon
+      +unstyled-link
+    img.weapon
+      width: 50px
+      height: 50px
+      padding: 10px
+      vertical-align: middle
