--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -2,6 +2,8 @@
 
 body
   +background-image(linear-gradient(left, rgba(127,127,127,0.25) 0%, rgba(127,127,127,0.05) 20%, rgba(127,127,127,0.1) 80%, rgba(127,127,127,0.25) 100%))
+  a
+    +unstyled-link
   .main
     width: 640px
     margin-left: auto
@@ -21,10 +23,12 @@ body
     .flash
       font-size: 150%
       color: gray
-    .weapon
-      +unstyled-link
     img.weapon
       width: 50px
       height: 50px
       padding: 10px
       vertical-align: middle
+    .smallprint
+      padding-top: 4em
+      font-size: 20%
+      color: gray
